--- a/styles/global.scss
+++ b/styles/global.scss
@@ -6,4 +6,7 @@
     box-sizing: border-box;
   }
 }
+body {
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+}
 
