--- a/styles/global.scss
+++ b/styles/global.scss
@@ -10,4 +10,8 @@
 body {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
 }
+a {
+  color: inherit;
+  text-decoration: none;
+}
 
